<resources>
    <string name="app_name">Task Reminder</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">   NO Reminders Set click Floating Button to add the Task</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Pick the Time</string>
    <string name="label">Label</string>
    <string name="days">Pick the Days to Remind </string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">      Enter Task Name!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure want to delete this reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>
    <string name="setTask">Set Task Name</string>
    <string name="setTaskName">"Set Task Name "</string>
    <string name="title">You Have a Task</string>

</resources>
