<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:background="@drawable/signin_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/setTaskName"
            tools:text="@string/setTask"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />


        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/my_button01"
            android:hint="@string/add_label_hint"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:textColor="@color/primary"
            android:textStyle="italic"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/time"
            tools:text="Time"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:timePickerMode="spinner"
            tools:targetApi="lollipop"
            android:background="@drawable/my_button01"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/days"
            tools:text="Days"
            android:textColor="@android:color/secondary_text_dark"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider"
            />





        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/monday"
                tools:text="Monday"
                android:textSize="16dp"
                android:background="@drawable/my_button01"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"

                />

            <CheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/tuesday"
                tools:text="Tuesday"
                android:textSize="16dp"
                android:background="@drawable/check_box_white"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"/>

            <CheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/wednesday"
                android:textSize="16dp"
                tools:text="Wednesday"
                android:background="@drawable/my_button01"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"/>

            <CheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/thursday"
                tools:text="Thursday"
                android:textSize="16dp"
                android:background="@drawable/my_button01"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"/>

            <CheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/friday"
                android:textSize="16dp"
                tools:text="Friday"
                android:background="@drawable/my_button01"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"/>

            <CheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/saturday"
                tools:text="Saturday"
                android:textSize="16dp"
                android:background="@drawable/my_button01"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"/>

            <CheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/sunday"
                android:textSize="16dp"
                tools:text="Sunday"
                android:background="@drawable/my_button01"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"/>

            <CheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"
                android:background="@drawable/my_button01"/>


        </android.support.v7.widget.GridLayout>


    </LinearLayout>

</ScrollView>